@@ -19,7 +19,7 @@ x_MailingList = http://dzil.org/#mailing-list
 [DynamicPrereqs]
 ; require a new Module::CoreList... but this may still become stale after the
 ; user installs it, so we do a runtime check as well.
--body = my @gmtime = gmtime(time() - 59 * 24 * 60 * 60);
+-body = my @gmtime = gmtime(time() - 89 * 24 * 60 * 60);
 -body = requires('Module::CoreList', sprintf('5.%04d%02d%02d', $gmtime[5] + 1900, $gmtime[4] + 1, $gmtime[3]));
 
 [Prereqs]
