@@ -36,10 +36,10 @@ sub before_release
 
     # we cannot know in advance the release schedule of Module::CoreList in order to check the latest perl
     # releases, but we can make a guess -- development releases are made once a month.  We'll assume that any
-    # Module::CoreList older than 2 months old is out of date, and lean on modules like [PromptIfStale] to confirm
+    # Module::CoreList older than 3 months old is out of date, and lean on modules like [PromptIfStale] to confirm
     # against the PAUSE index.
 
-    my $delta = 2 * 30 * 24 * 60 * 60;
+    my $delta = 3 * 30 * 24 * 60 * 60;
     my @gmtime = gmtime(time() - $delta);
     my $expected_version = sprintf('5.%04d%02d%02d', $gmtime[5] + 1900, $gmtime[4] + 1, $gmtime[3]);
 
